# volga

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUZZING.md  README.md  SECURITY.md  coverage.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
benches/: auth.rs  mw.rs  server.rs
docs/: api-design.md
examples/: compression.rs  cookies.rs  cors.rs  custom_request_headers.rs  decompression.rs  dependency_injection.rs  file_download.rs  file_upload.rs  form.rs  global_404_handler.rs  global_error_handler.rs  head_request.rs  headers.rs  hello_world.rs  http_request_handler.rs  json.rs  jwt.rs  long_running_task.rs  mcp.rs  middleware.rs  multipart.rs  options_request.rs  private_cookies.rs  query_params.rs  request_validation.rs  response_handler.rs  route_groups.rs  (+8 more)
examples/cors/: Cargo.toml
examples/cors/src/: main.rs
examples/cors/static/: index.html
examples/dependency_injection/: Cargo.toml
examples/dependency_injection/src/: main.rs
examples/oauth_flow/: Cargo.toml
examples/oauth_flow/src/: main.rs
examples/websockets/: Cargo.toml
examples/websockets/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_extractor_typed/: form_ok  json_bad  json_ok  json_truncated  missing_content_type
fuzz/corpus/fuzz_query_decode/: percent_bad  percent_nul  percent_slash
fuzz/corpus/fuzz_router_match/: long  percent_bad  percent_nul  percent_slash  utf8
fuzz/fuzz_targets/: fuzz_extractor_typed.rs  fuzz_openapi_gen.rs  fuzz_query_decode.rs  fuzz_router_match.rs
volga/: Cargo.toml  README.md
volga-dev-cert/: Cargo.toml  README.md
volga-dev-cert/src/: lib.rs
volga-di/: Cargo.toml  README.md
volga-di/src/: container.rs  error.rs  inject.rs  lib.rs
volga-di/src/container/: factory.rs  from_container.rs
volga-macros/: Cargo.toml  README.md
volga-macros/src/: attr.rs  auth.rs  di.rs  http.rs  lib.rs
volga-macros/src/http/: attr.rs
volga-macros/tests/: trybuild.rs
volga-macros/tests/ui/: claims_invalid.rs  claims_invalid.stderr  claims_ok.rs  http_header_invalid.rs  http_header_invalid.stderr  http_header_ok.rs
volga-oauth-client/: Cargo.toml  README.md
volga-oauth-client/src/: cache.rs  client.rs  config.rs  discovery.rs  error.rs  lib.rs  pkce.rs  registration.rs  store.rs  token.rs  transport.rs
volga-oauth-client/tests/: discovery_tests.rs  registration_tests.rs  token_flow_tests.rs
volga-oauth-client/tests/common/: mod.rs
volga-oauth-core/: Cargo.toml  README.md
volga-oauth-core/src/: error.rs  lib.rs  metadata.rs  registration.rs  utils.rs
volga-open-api/: Cargo.toml  README.md
volga-open-api/src/: config.rs  doc.rs  lib.rs  op.rs  param.rs  registry.rs  route.rs  schema.rs  ui.rs
volga-rate-limiter/: Cargo.toml  README.md
volga-rate-limiter/src/: lib.rs  rate_limiter.rs
volga-rate-limiter/src/rate_limiter/: fixed_window.rs  gcra.rs  sliding_window.rs  store.rs  token_bucket.rs
volga/benches/: auth.rs  di.rs  mw.rs  server.rs
volga/src/: app.rs  auth.rs  config.rs  di.rs  error.rs  fs.rs  fuzzing.rs  headers.rs  http.rs  json.rs  lib.rs  limits.rs  middleware.rs  openapi.rs  rate_limiting.rs  server.rs  test.rs  test_utils.rs  tls.rs  tracing.rs  utils.rs  ws.rs
volga/src/app/: app_env.rs  connection.rs  env.rs  greeter.rs  host_env.rs  pipeline.rs  router.rs  scope.rs  shutdown.rs
volga/src/auth/: algorithm.rs  authenticated.rs  authorizer.rs  basic.rs  bearer.rs  claims.rs  decoding_key.rs  encoding_key.rs  oauth.rs  oauth_client.rs  pem.rs
volga/src/auth/oauth/: error.rs  handlers.rs  metadata.rs  utils.rs
volga/src/config/: builder.rs  extractor.rs  mod.rs  processing.rs  sections.rs  store.rs
volga/src/di/: dc.rs
volga/src/error/: fallback.rs  handler.rs  problem.rs
volga/src/fs/: static_files.rs
volga/src/fs/static_files/: file_listing.rs
volga/src/headers/: cache_control.rs  encoding.rs  etag.rs  extract.rs  header.rs  helpers.rs  known_headers.rs  known_heades.rs  macros.rs  quality.rs
volga/src/headers/header/: try_into_header.rs
volga/src/http/: body.rs  cookie.rs  cors.rs  endpoints.rs  request.rs  request_scope.rs  response.rs
volga/src/http/body/: into_body.rs
volga/src/http/cookie/: private.rs  signed.rs
volga/src/http/endpoints/: args.rs  handlers.rs  meta.rs  route.rs
volga/src/http/endpoints/args/: byte_stream.rs  cancellation_token.rs  client_ip.rs  file.rs  form.rs  host_env.rs  json.rs  multipart.rs  option.rs  path.rs  query.rs  request.rs  result.rs  sse.rs  vec.rs
volga/src/http/endpoints/args/multipart/: encoder.rs  error.rs  field.rs  part.rs
volga/src/http/endpoints/route/: layer.rs  path_args.rs
volga/src/http/request/: query_args.rs  request_body_limit.rs  request_mut.rs
volga/src/http/response/: builder.rs  file.rs  filter_result.rs  form.rs  html.rs  into_response.rs  macros.rs  ok.rs  redirect.rs  sse.rs  status.rs  stream.rs
volga/src/limits/: http2.rs
volga/src/middleware/: compress.rs  cors.rs  decompress.rs  handler.rs  http_context.rs  make_fn.rs
volga/src/middleware/decompress/: limits.rs
volga/src/openapi/: schema.rs
volga/src/rate_limiting/: by.rs  fixed_window.rs  gcra.rs  key.rs  sliding_window.rs  token_bucket.rs
volga/src/server/: http1.rs  http2.rs
volga/src/test/: fs.rs  server.rs  utils.rs  ws.rs
volga/src/tls/: https_redirect.rs
volga/src/utils/: str.rs
volga/src/ws/: args.rs  connection.rs  websocket.rs
volga/tests/: auth_claims.rs  auth_require_https_tests.rs  auth_strip_token_tests.rs  auth_www_authenticate_tests.rs  common.rs  compression.rs  config_tests.rs  cors.rs  decompression.rs  file_download.rs  file_upload.rs  headers.rs  http_header_macro.rs  json_payload.rs  jwt.rs  mapping_tests.rs  middleware_mapping_tests.rs  multipart_response_tests.rs  oauth_client_tests.rs  oauth_metadata_tests.rs  rate_limiting.rs  request_params.rs  response_caching.rs  scope_pipeline.rs  shutdown_tests.rs  sse.rs  static_files.rs  tls.rs  tracing.rs  ws.rs
volga/tests/static/: index.html
volga/tests/tls/: README.md  ca.key  ca.pem  client.key  client.pem  generate.sh  server.key  server.pem
(+222 files in other folders)
