[workspace]
members = ["volga", "volga-*", "examples/*"]
default-members = ["volga", "volga-*"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2024"
rust-version = "1.90.0"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"