[workspace]
members = ["volga", "volga-*", "examples/*"]
default-members = ["volga", "volga-*"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2024"
rust-version = "1.90.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
repository = "https://github.com/RomanEmreis/volga"
documentation = "https://docs.rs/volga"
homepage = "https://romanemreis.github.io/volga-docs"
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"