[workspace]
members = ["volga", "volga-*", "examples/*"]
default-members = ["volga", "volga-*"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.8.7"
license = "MIT"
edition = "2024"
rust-version = "1.90.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
repository = "https://github.com/RomanEmreis/volga"
documentation = "https://docs.rs/volga"
homepage = "https://romanemreis.github.io/volga-docs"
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]

[workspace.dependencies]
volga-dev-cert    = { path = "volga-dev-cert",    version = "0.8.7" }
volga-di          = { path = "volga-di",          version = "0.8.7" }
volga-macros      = { path = "volga-macros",      version = "0.8.7" }
volga-open-api    = { path = "volga-open-api",    version = "0.8.7" }
volga-rate-limiter = { path = "volga-rate-limiter", version = "0.8.7" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
