[package]
name = "volga-dev-cert"
version = "0.8.5"
readme = "README.md"
description = "A Rust library for generating self-signed TLS certificates for local development."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "server", "https", "tls"]

[dependencies]
rcgen = "0.14.7"

[dev-dependencies]
serial_test = "3.4.0"

[lints]
workspace = true
