[package]
name = "volga-di"
version = "0.7.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Roman Emreis <roman.emreis@outlook.com>"]
license = "MIT"
repository = "https://github.com/RomanEmreis/volga"
description = "Dependency Injection tools for Volga Web Framework"
documentation = "https://docs.rs/volga"
readme = "README.md"
homepage = "https://romanemreis.github.io/volga-docs"
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]
keywords = ["volga", "container", "dependency", "injection", "di"]

[dependencies]
http = "1.3.1"
volga-macros = { path = "../volga-macros", version = "0.7.0", features = ["di-derive"], optional = true }

[features]
default = []
macros = ["dep:volga-macros"]

[lints]
workspace = true
