[package]
name = "volga-di"
version = "0.7.2"
readme = "README.md"
description = "Dependency Injection tools for Volga Web Framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "container", "dependency", "injection", "di"]

[dependencies]
http = "1.4.0"

[features]
default = []

[lints]
workspace = true
