[package]
name = "volga-macros"
version = "0.8.1"
readme = "README.md"
description = "Macros for Volga Web Framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "http", "web", "framework"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
proc-macro2 = "1.0.106"

[dev-dependencies]
trybuild = "1.0.96"
serde = { version = "1.0.219", features = ["derive"] }
volga = { path = "../volga", features = ["jwt-auth"] }

[features]
default = []
jwt-auth-derive = []

[lints]
workspace = true