[package]
name = "volga-oauth-client"
version.workspace = true
readme = "README.md"
description = "OAuth 2.1/OIDC client for Volga Web Framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "oauth", "oidc", "client", "discovery"]

[dependencies]
bytes = "1.12.0"
http = "1.4.2"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "tls12", "webpki-tokio", "aws-lc-rs"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["time"] }
volga-oauth-core = { workspace = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
volga = { path = "../volga", features = ["http1", "oauth"] }

[features]
default = []

[lints]
workspace = true
