[package]
name = "volga-oauth-client"
version.workspace = true
readme = "README.md"
description = "OAuth 2.1/OIDC client for Volga Web Framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "oauth", "oidc", "client", "discovery"]

[dependencies]
bytes = "1.12.0"
http = "1.4.2"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["tls12", "webpki-tokio", "aws-lc-rs"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "tokio"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["time"] }
volga-oauth-core = { workspace = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
volga = { path = "../volga", features = ["http1", "oauth"] }

[features]
# Default HTTP/1 only client
default = ["http1"]
http1 = ["hyper/http1", "hyper-util/http1", "hyper-rustls/http1"]
http2 = ["hyper/http2", "hyper-util/http2", "hyper-rustls/http2"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
