[package]
name = "volga-open-api"
version = "0.8.5"
readme = "README.md"
description = "Volga Open API Integration"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "openapi", "documentation", "rest-api"]

[dependencies]
http = "1.4.0"
mime = "0.3.17"
sha1 = "0.10.6"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
