[package]
name = "volga-open-api"
version.workspace = true
readme = "README.md"
description = "Volga Open API Integration"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "openapi", "documentation", "rest-api"]

[dependencies]
http = "1.4.2"
mime = "0.3.17"
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }

[features]
problem-details = []

[lints]
workspace = true
