[package]
name = "volga-rate-limiter"
version = "0.8.3"
readme = "README.md"
description = "Macros for Volga Web Framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "http", "web", "framework"]

[dependencies]
dashmap = "6.1.0"

[lints]
workspace = true
