[package]
name = "volga-rate-limiter"
version.workspace = true
readme = "README.md"
description = "A lightweight and efficient rate-limiting library for Rust."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["volga", "http", "web", "framework"]

[dependencies]
dashmap = "6.2.1"

[lints]
workspace = true
