[package]
name = "volga"
version = "0.8.2"
readme = "../README.md"
description = "Easy & Fast Web Framework for Rust"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
keywords = ["async", "server", "http", "web", "framework"]

[dependencies]
# required
bytes = "1.11.0"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
http-body-util = "0.1.3"
itoa = "1.0.17"
indexmap = "2.13.0"
memchr = "2.7.6"
mime = "0.3.17"
mime_guess = "2.0.5"
pin-project-lite = "0.2.16"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
serde = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
smallvec = "1.15.1"

# optional
async-compression = { version = "0.4.37", features = ["tokio"], optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.43", optional = true }
cookie = { version = "0.18.1", features = ["percent-encode"], optional = true }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], optional = true }
handlebars = { version = "6.4.0", optional = true }
httpdate = { version = "1.0.3", optional = true }
hyper = { version = "1.8.1", features = ["server"], optional = true }
hyper-util = { version = "0.1.19", features = ["server", "server-auto", "server-graceful", "service", "tokio"], optional = true }
multer = { version = "3.1.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
reqwest = { version = "0.13.1", optional = true }
tempfile = { version = "3.24.0", optional = true }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["tls12", "aws-lc-rs"], optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }
tracing = { version = "0.1.44", default-features = false, optional = true }
twox-hash = { version = "2.1.2", optional = true }
uuid = { version = "1.20.0", features = ["v4"], optional = true }

# volga
volga-dev-cert = { path = "../volga-dev-cert", version = "0.8.2", optional = true }
volga-di = { path = "../volga-di", version = "0.8.2", optional = true }
volga-macros = { path = "../volga-macros", version = "0.8.2", optional = true }
volga-rate-limiter = { path = "../volga-rate-limiter", version = "0.8.2", optional = true }

[dev-dependencies]
base64 = { version = "0.22.1" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
hyper = { version = "1.8.1", features = ["client"] }
reqwest = { version = "0.13.1", features = ["rustls-no-provider"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = "0.1.18"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
criterion = { version = "0.8.1", features = ["async_tokio"] }
tempfile = "3.24.0"

[features]
# Default HTTP/1 only server
default = ["http1"]
# HTTP/1 and HTTP/2 server
full = [
    "http1", 
    "http2",
    "auth",
    "middleware", 
    "di",
    "tls",
    "cookie-full",
    "tracing",
    "multipart",
    "problem-details",
    "rate-limiting",
    "static-files",
    "compression-full", 
    "decompression-full",
    "ws"
]

http1 = ["dep:hyper", "hyper?/http1", "dep:hyper-util", "hyper-util?/http1", "dep:httpdate"]
http2 = ["dep:hyper", "hyper?/http2", "dep:hyper-util", "hyper-util?/http2", "dep:httpdate"]

auth = ["basic-auth", "jwt-auth"]
basic-auth = ["dep:base64", "middleware"]
jwt-auth = ["dep:jsonwebtoken", "middleware"]
jwt-auth-full = ["jwt-auth", "dep:volga-macros", "volga-macros?/jwt-auth-derive"]
dev-cert = ["dep:volga-dev-cert"]
di = ["dep:volga-di"]
macros = ["dep:volga-macros"]
middleware = []
multipart = ["dep:multer"]
problem-details = ["serde/derive"]
rate-limiting = ["dep:twox-hash", "dep:volga-rate-limiter", "middleware"]
static-files = ["dep:chrono", "dep:handlebars", "dep:sha1"]
tls = ["dep:tokio-rustls", "tokio-rustls?/tls12", "tokio-rustls?/aws-lc-rs"]
tracing = ["dep:tracing"]
ws = ["dep:sha1", "dep:base64", "dep:tokio-tungstenite"]

cookie-full = ["cookie", "private-cookie", "signed-cookie"]
cookie = ["dep:cookie"]
private-cookie = ["di", "dep:cookie", "cookie?/private"]
signed-cookie = ["di", "dep:cookie", "cookie?/signed"]

compression-full = ["compression-brotli", "compression-gzip", "compression-zstd"]
compression-brotli = ["middleware", "dep:async-compression", "async-compression?/brotli"]
compression-gzip = ["middleware", "dep:async-compression", "async-compression?/zlib", "async-compression?/gzip"]
compression-zstd = ["middleware", "dep:async-compression", "async-compression?/zstd"]

decompression-full = ["decompression-brotli", "decompression-gzip", "decompression-zstd"]
decompression-brotli = ["middleware", "dep:async-compression", "async-compression?/brotli"]
decompression-gzip = ["middleware", "dep:async-compression", "async-compression?/zlib", "async-compression?/gzip"]
decompression-zstd = ["middleware", "dep:async-compression", "async-compression?/zstd"]

test = [
    "dep:uuid",
    "dep:tempfile",
    "dep:reqwest", 
    "reqwest?/blocking", 
    "reqwest?/multipart", 
    "reqwest?/stream", 
    "reqwest?/json", 
    "reqwest?/http2", 
    "reqwest?/brotli", 
    "reqwest?/deflate", 
    "reqwest?/gzip", 
    "reqwest?/zstd", 
    "reqwest?/rustls-no-provider"
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[[bench]]
name = "server"
harness = false

[[bench]]
name = "di"
harness = false
required-features = ["di"]

[[bench]]
name = "mw"
harness = false
required-features = ["middleware"]

[[bench]]
name = "auth"
harness = false
required-features = ["jwt-auth","middleware"]
