[package]
name = "websockets"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = "1.46.1"
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
volga = { path = "../../volga", features = ["di","ws","tracing"] }

[lints]
workspace = true
